change some locations

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       background-color: #1b1b1b;
     }
   </style>
-  <script src="./p5js/p5.js"></script>
+  <script src="./lib/p5.min.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
-  <script src="./main/background.js"></script>
-  <script src="./main/player.js"></script>
-  <script src="./main/sketch.js"></script>
+  <script src="./src/background.js"></script>
+  <script src="./src/player.js"></script>
+  <script src="./src/sketch.js"></script>
 </head>
 
 <body>
