--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
   </style>
   <script src="./lib/p5.min.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
+  <!-- <script src="./lib/p5.sound.min.js"></script> -->
   <script src="./src/background.js"></script>
   <script src="./src/player.js"></script>
   <script src="./src/sketch.js"></script>
