--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <!-- <script src="./lib/p5.sound.min.js"></script> -->
   <script src="./src/background.js"></script>
   <script src="./src/player.js"></script>
+  <script src="./src/player2.js"></script>
   <script src="./src/sketch.js"></script>
+  <script src="./src/utils.js"></script>
 </head>
 
 <body>
