--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="./src/player2.js"></script>
   <script src="./src/sketch.js"></script>
   <script src="./src/utils.js"></script>
+  <script src="./src/bullet.js"></script>
 </head>
 
 <body>
