--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     }
   </style>
   <script src="./lib/p5.min.js"></script>
+  <script src="./lib/p5.particle.js"></script>
   <!-- <script src="./lib/p5.sound.min.js"></script> -->
   <script src="./src/background.js"></script>
   <script src="./src/player.js"></script>
@@ -20,6 +21,7 @@
   <script src="./src/sketch.js"></script>
   <script src="./src/utils.js"></script>
   <script src="./src/bullet.js"></script>
+  <script src="./src/particles.js"></script>
 </head>
 
 <body>
