add main sound efects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </style>
   <script src="./lib/p5.min.js"></script>
   <script src="./lib/p5.particle.js"></script>
-  <!-- <script src="./lib/p5.sound.min.js"></script> -->
+  <script src="./lib/p5.sound.js"></script>
   <script src="./src/background.js"></script>
   <script src="./src/player.js"></script>
   <script src="./src/player2.js"></script>
