--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 <head>
   <meta charset="utf-8">
@@ -22,10 +23,20 @@
   <script src="./src/utils.js"></script>
   <script src="./src/bullet.js"></script>
   <script src="./src/particles.js"></script>
+  <script src="./src/asteroid.js"></script>
+
 </head>
 
 <body>
   <main>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <button type="button" class="btn btn-primary" onclick="iniciarJuego()">Iniciar</button>
+                <button type="button" class="btn btn-secondary" onclick="mostrarOpciones()">Controles</button>
+            </div>
+        </div>
+    </div>
   </main>
 </body>
 
